--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
+  --foreground-rgb: 255, 255, 255;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
@@ -86,18 +86,23 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: rgb(0, 0, 0);
+  background: rgb(255, 255, 255);
 }
 
 a {
-  color: inherit;
+  color: rgb(255, 255, 255);
   text-decoration: none;
+  transition: all 0.4s;
+}
+
+a:hover {
+  color: rgb(100, 200, 200);
+  transition: all 0.4s;
+}
+
+h1 {
+  font-weight: 900;
 }
 
 @media (prefers-color-scheme: dark) {
